chart/templates/deployment-block.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block
  labels:
    app: block
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block
  template:
    metadata:
      labels:
        app: block
    spec:
      containers:
      - name: block
        imagePullPolicy: Always
        image: quay.io/fdavalo/app-test-storage:v1 
        command: ["sh", "-c", "python3 server.py"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/lib/data
          name: data     
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: block-data
