chart/templates/service-block.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: block
  name: block
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: block
  type: ClusterIP
