chart/templates/service-file.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: file
  name: file
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: file
  type: ClusterIP
