chart/templates/route-block.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: block
  name: block
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: block
    weight: 100
